Kubernetes/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose -f ./compose.yaml convert
    kompose.version: 1.34.0 (cbf2835db)
    subdomain: watch
    traefik.enable: "true"
    traefik.http.routers.jellyfin.middlewares: crowdsec,default-headers
    traefik.http.services.jellyfin.loadbalancer.server.port: "8096"
  labels:
    io.kompose.service: jellyfin
  name: jellyfin
  namespace: media
spec:
  ports:
    - name: "8096"
      port: 8096
      targetPort: 8096
    - name: "7359"
      port: 7359
      protocol: UDP
      targetPort: 7359
    - name: "1900"
      port: 1900
      protocol: UDP
      targetPort: 1900
  selector:
    io.kompose.service: jellyfin
