Kubernetes/media/jellyfin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`^watch\.(.+)`)
      kind: Rule
      observability:
        accessLogs: true
      services:
        - name: jellyfin
          port: 8096
